--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.1",
   "description": "Clones prototypes",
   "main": "index.js",
-  "scripts": {
-    "test": "grunt test"
-  },
   "repository": {
     "type": "git",
     "url": "git://github.com/basicdays/clone.git"
@@ -17,15 +14,11 @@
     "prototypes",
     "objects"
   ],
-  "author": "basicdays",
+  "author": "Paul Sanchez <paul@basicdays>",
   "license": "MIT",
-  "readmeFilename": "Readme.md",
-  "gitHead": "58ad3ce9191c6412d22f50aabc1ce9af7dd91f8d",
-  "bugs": {
-    "url": "https://github.com/basicdays/clone/issues"
-  },
   "devDependencies": {
     "mocha": "~1.12.0",
-    "should": "~1.2.2"
+    "should": "~1.2.2",
+    "jshint": "~2.1.8"
   }
 }
