--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
 		"type": "git",
 		"url": "git://github.com/basicdays/clone.git"
 	},
+	"dependencies": {
+		"type-component": "~0.0.1"
+	},
 	"devDependencies": {
 		"mocha": "~1.12.0",
 		"should": "~1.2.2",
